<resources>
    <string name="app_name">Cinemania</string>
    <string name="title_activity_movie_detail">MovieDetail</string>
    <string name="action_most_popular">Most Popular</string>
    <string name="action_highest_rated">Highest Rated</string>
    <string name="internet_not_available">Internet is not available</string>
    <string name="action_favorite">Favorite Movies</string>
    <string name="overview">Overview</string>
    <string name="trailer">Trailer</string>
    <string name="reviews">Reviews</string>
    <string name="retry">Retry</string>
    <string name="youtube_image">https://img.youtube.com/vi/%s/mqdefault.jpg</string>
    <string name="youtube_video">http://www.youtube.com/watch?v=%s</string>
    <string name="search">Search</string>
    <string name="title_movies_fragment">Movies</string>
    <string name="title_tv_fragment">TV Shows</string>
    <string name="title_actors_fragment">Actors</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_save_image">Save Image</string>
    <string name="action_set_as">Set As</string>
    <string name="action_share_image">Share Image</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="about_website">
        Made with ❤ from 🇮🇳
    </string>
    <string name="text_version">Version</string>
    <string name="change_log">Change Log</string>
    <string name="author">Krunal Kapadiya</string>
    <string name="url_faq">https://krunal3kapadiya.app</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_favourite">Favourites</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>
