<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.krunal3kapadiya.popularmovies.MovieDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/ctl_movie_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="?attr/actionBarSize"
            app:contentScrim="@color/colorAccent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/movie_detail_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <com.krunal3kapadiya.popularmovies.view.MarqueeToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favorite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/movie_detail_vertical_margin"
        android:src="@mipmap/ic_favorite_white"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:behavior_overlapTop="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_movie_poster"
                android:layout_width="@dimen/movie_poster_width"
                android:layout_height="@dimen/movie_poster_height"
                android:layout_marginStart="@dimen/row_view_vertical_margin"
                android:layout_marginTop="@dimen/movie_detail_vertical_margin" />

            <TextView
                android:id="@+id/txt_movie_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/movie_detail_margin_from_image"
                android:layout_marginLeft="@dimen/movie_detail_margin_from_image"
                android:layout_marginTop="@dimen/movie_detail_vertical_margin"
                android:layout_toEndOf="@id/img_movie_poster"
                android:layout_toRightOf="@id/img_movie_poster"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <android.support.v7.widget.AppCompatRatingBar
                android:id="@+id/arb_movie_ratings"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_movie_release"
                android:layout_marginStart="@dimen/movie_detail_margin_from_image"
                android:layout_marginLeft="@dimen/movie_detail_margin_from_image"
                android:layout_marginTop="@dimen/movie_detail_vertical_margin"
                android:layout_toEndOf="@id/img_movie_poster"
                android:layout_toRightOf="@id/img_movie_poster"
                android:numStars="5"
                android:stepSize="0.5" />


            <android.support.v7.widget.CardView
                android:id="@+id/card_movie_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_movie_poster"
                android:layout_margin="@dimen/movie_detail_vertical_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/movie_detail_vertical_margin">

                    <TextView
                        android:id="@+id/txt_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/overview"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/txt_movie_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_movie_trailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_movie_overview"
                android:layout_margin="@dimen/movie_detail_vertical_margin"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/movie_detail_vertical_margin">

                    <TextView
                        android:id="@+id/txt_trailer_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/trailer"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_movie_trailer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_movie_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_movie_trailer"
                android:layout_margin="@dimen/movie_detail_vertical_margin"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/movie_detail_vertical_margin">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reviews"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_movie_reviews"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>